<resources>
    <string name="app_name">Homework 1</string>
    <string name="reg_f">Registration Form</string>
    <string name="name">Name</string>
    <string name="roll_no">Roll No</string>
    <string name="branch">Branch</string>
    <string name="c1">Course 1</string>
    <string name="c2">Course 2</string>
    <string name="c3">Course 3</string>
    <string name="c4">Course 4</string>
    <string name="reg_d">Registration Details</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="Back">Back</string>
</resources>