<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_A1_MT18070">


    <TextView
        android:id="@+id/marf"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reg_f"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="27dp" />

    <EditText
        android:id="@+id/marn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:hint="@string/roll_no"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="82dp" />

    <EditText
        android:id="@+id/mab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/branch"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="147dp" />

    <EditText
        android:id="@+id/mac1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/c1"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/mac2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="229dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/c2"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="270dp" />

    <EditText
        android:id="@+id/mac3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="161dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/c3"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="333dp" />

    <EditText
        android:id="@+id/mac4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/c4"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/masb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="19dp"
        android:layout_marginStart="11dp"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="445dp" />

    <Button
        android:id="@+id/macb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/masb"
        android:layout_marginEnd="41dp"
        android:text="@string/clear"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="447dp" />

</RelativeLayout>
